style: change color scheme to dark

--- a/src/app/components/beer-card.styl
+++ b/src/app/components/beer-card.styl
@@ -5,9 +5,9 @@
 	align-items flex-start
 	align-content space-between
 	padding 1em
-	border 1px solid var(--color-gray-n10)
+	// border 1px solid var(--color-gray-n10)
 	border-radius .25em
-	background-color var(--color-white)
+	background-color var(--color-gray-n700)
 
 	.prod 
 		display flex
@@ -16,11 +16,13 @@
 		.brewery
 			font-family 'Arial', 'Helvetica', sans-serif
 			font-size 1em
+			color var(--color-white)
 	
 		.name
 			font-family 'Georgia', 'Times', serif
 			font-size 1.75em
 			margin .25em 0 
+			color var(--color-white)
 		
 	.sort
 		display block
@@ -42,6 +44,7 @@
 		margin-top auto
 		font-family 'Arial', 'Helvetica', sans-serif
 		font-size 1.75em
+		color var(--color-white)
 
 		.abv
 			margin-right .5em
