--- a/src/app/index.styl
+++ b/src/app/index.styl
@@ -8,6 +8,8 @@
 	--color-gray-n10 #EBECF0
 	--color-gray-n20 #DFE1E6
 	--color-gray-n30 #B3BAC5
+	--color-gray-n400 #505F79
+	--color-gray-n700 #253858
 
 /* App */
 .container
@@ -19,4 +21,4 @@
 	width 100vw
 	height 100vh
 	padding 2em
-	background-color var(--color-gray-n30)
+	background-color var(--color-black)
