--- a/src/app/components/beer-card.styl
+++ b/src/app/components/beer-card.styl
@@ -12,17 +12,19 @@
 	.prod 
 		display flex
 		flex-flow column nowrap
+		color var(--color-white)
 
 		.brewery
 			font-family 'Arial', 'Helvetica', sans-serif
 			font-size 1em
-			color var(--color-white)
 	
 		.name
-			font-family 'Georgia', 'Times', serif
+			font-family 'Garamond', 'Times', serif
 			font-size 1.75em
+			font-weight bold
+			font-variant-numeric tabular-nums
+			letter-spacing 1px
 			margin .25em 0 
-			color var(--color-white)
 		
 	.sort
 		display block
@@ -49,6 +51,6 @@
 		.abv
 			margin-right .5em
 
-		.price
-			margin-right .5em
+		// .price
+		// 	margin-right .5em
 
