--- a/src/app/components/beer-card.styl
+++ b/src/app/components/beer-card.styl
@@ -15,7 +15,7 @@
 		color var(--color-white)
 
 		.brewery
-			font-family 'Arial', 'Helvetica', sans-serif
+			font-family 'Helvetica', 'Arial', sans-serif
 			font-size 1em
 	
 		.name
