--- a/src/app/components/beer-card.styl
+++ b/src/app/components/beer-card.styl
@@ -8,6 +8,8 @@
 	// border 1px solid var(--color-gray-n10)
 	border-radius .25em
 	background-color var(--color-gray-n700)
+	&:hover
+		background-color var(--color-gray-n500)
 
 	.prod 
 		display flex
