--- a/src/app/components/inventory.styl
+++ b/src/app/components/inventory.styl
@@ -4,25 +4,33 @@
 	background-color var(--color-white)
 	padding 24px
 	font-family 'Helvetica', 'Arial', sans-serif
+	header
+		display flex
+		flex-flow row nowrap
+		justify-content space-between
+		.close-icon
+			border-radius 4px
+			&:hover
+				background-color var(--color-gray-n10)
+			// cursor pointer
 	h2
 		margin-bottom 16px
-	button
-		// width 300px
-		padding 8px 16px
-		margin-top 32px
-		border 2px solid var(--color-gray-n400)
-		border-radius 4px
-		font-size 1em
-		cursor pointer
-		outline none
-		&:hover 
-			background-color rgba(#FFF, .2)
 	footer 
-		position relative
-		// bottom 0
-		top 90%
-		// left 40px
+		display flex
+		justify-content flex-end
 		background-color var(--color-white)
+		button
+			padding 8px 16px
+			margin-top 32px
+			margin-right 20px
+			border 2px solid var(--color-gray-n400)
+			border-radius 4px
+			font-size 1em
+			// cursor pointer
+			outline none
+			&:hover 
+				background-color var(--color-black)
+				color var(--color-white)
 	.beer-form
 		display flex
 		flex-flow column nowrap
@@ -38,12 +46,13 @@
 			display flex
 			flex-flow row nowrap
 			flex-grow 1
-			input
-				width 64px
-
+			// input
+			// 	width 64px
+		h3
+			margin-bottom 4px
 		input
 			width 100%
-			margin 8px 8px 8px 0
+			margin 4px
 			padding 8px
 			border none
 			border-radius 2px
