--- a/src/app/components/inventory.styl
+++ b/src/app/components/inventory.styl
@@ -1,9 +1,22 @@
+form-block = 
+	display flex
+	flex-flow row nowrap
+	justify-content flex-start
+	margin-top 8px
+
+input-flex-block = 
+	display flex
+	flex-flow column nowrap
+	flex 1
+	margin-right 8px
+
 .inventory
 	display flex
 	flex-flow column nowrap
 	background-color var(--color-white)
 	padding 24px
 	font-family 'Helvetica', 'Arial', sans-serif
+	border 10px double var(--color-black)
 	header
 		display flex
 		flex-flow row nowrap
@@ -35,24 +48,37 @@
 		display flex
 		flex-flow column nowrap
 		margin 16px
-		.names
-			display flex
-			flex-flow row nowrap
-			justify-content space-around
+		p
+			font-size .75em
+		
+		.product
+			{form-block}
+			.brewery
+				{input-flex-block}
+			.name
+				{input-flex-block}
+		
 		.price-tag
-			display flex
-			flex-flow row nowrap
+			{form-block}
+			.style
+				{input-flex-block}
+			.price
+				{input-flex-block}	
+
 		.stats
-			display flex
-			flex-flow row nowrap
-			flex-grow 1
-			// input
-			// 	width 64px
+			{form-block}
+			.og
+				{input-flex-block}
+			.abv
+				{input-flex-block}
+			.ibu
+				{input-flex-block}
+
 		h3
 			margin-bottom 4px
 		input
 			width 100%
-			margin 4px
+			margin-top 4px
 			padding 8px
 			border none
 			border-radius 2px
