--- a/src/app/components/beer-card.styl
+++ b/src/app/components/beer-card.styl
@@ -1,58 +1,74 @@
 .beer-card
 	display flex
-	flex-flow column nowrap
-	justify-content space-start
-	align-items flex-start
-	align-content space-between
+	flex-flow row nowrap
+	justify-content flex-start
+	align-items center
 	padding 1em
+	// position relative
 	// border 1px solid var(--color-gray-n10)
 	border-radius .25em
 	background-color var(--color-gray-n700)
 	&:hover
 		background-color var(--color-gray-n500)
+	
+	.tap-number
+		flex-basis 8%
+		margin-right 20px
+		// color var(--color-red-r300)
+		color #8777D9
+		font-family 'Helvetica', 'Arial', sans-serif
+		font-size 3em
+		font-weight bold
+		text-align center
+		opacity .6
 
-	.prod 
+	.card__prod 
 		display flex
 		flex-flow column nowrap
 		color var(--color-white)
+		flex 2
 
-		.brewery
+		.prod__brewery
 			font-family 'Helvetica', 'Arial', sans-serif
 			font-size 1em
 	
-		.name
+		.prod__name
+			display flex
+			align-items center
 			font-family 'Garamond', 'Times', serif
 			font-size 1.75em
 			font-weight bold
 			font-variant-numeric tabular-nums
 			letter-spacing 1px
-			margin .25em 0 
+			margin-top 8px 
 		
-	.style
-		display block
-		padding 4px 8px 3px 8px
-		border-radius 2px
-		background-color var(--color-gray-n20)
-		font-family 'Arial', 'Helvetica', sans-serif
-		font-size .65em
-		text-transform uppercase
-		font-weight 600
-		letter-spacing .1em
-		color var(--color-black)
+		.card__style
+			padding 4px 8px 3px 8px
+			margin-left 16px
+			border-radius 2px
+			background-color var(--color-gray-n20)
+			font-family 'Arial', 'Helvetica', sans-serif
+			font-size 12px
+			text-transform uppercase
+			font-weight 600
+			letter-spacing .1em
+			color var(--color-black)
 
-	.stats
+	.card__stats
 		width 100%
 		display flex
 		flex-flow row nowrap
-		justify-content space-between
-		margin-top auto
+		justify-content flex-start
+		flex 1
 		font-family 'Arial', 'Helvetica', sans-serif
-		font-size 1.75em
+		font-size 2em
 		color var(--color-white)
 
-		.abv
-			margin-right .5em
-
-		// .price
-		// 	margin-right .5em
+		.stats__og, 
+		.stats__abv, 
+		.stats__ibu,
+		.stats__price 
+			margin-right .6em
+			min-width 4rem
+			text-align center
 
