--- a/src/app/components/inventory.styl
+++ b/src/app/components/inventory.styl
@@ -2,7 +2,7 @@ form-block =
 	display flex
 	flex-flow row nowrap
 	justify-content flex-start
-	margin-top 8px
+	margin-top 12px
 
 input-flex-block = 
 	display flex
@@ -47,7 +47,7 @@ input-flex-block =
 	.beer-form
 		display flex
 		flex-flow column nowrap
-		margin 16px
+		margin 16px 16px 24px 16px
 		p
 			font-size .75em
 		
@@ -76,12 +76,13 @@ input-flex-block =
 
 		h3
 			margin-bottom 4px
+			color #8777D9
 		input
 			width 100%
 			margin-top 4px
 			padding 8px
 			border none
 			border-radius 2px
-			background-color var(--color-gray-n20)
+			background-color var(--color-gray-n10)
 			&::placeholder
 				color var(--color-gray-n30)
