--- a/src/app/index.styl
+++ b/src/app/index.styl
@@ -7,15 +7,20 @@
 	--color-gray-n10 #EBECF0
 	--color-gray-n20 #DFE1E6
 	--color-gray-n30 #B3BAC5
-	--color-gray-n400 #505F79
-	--color-gray-n500 #42526E
-	--color-gray-n700 #253858
+	--color-gray-n400 #505B5D
+	--color-gray-n500 #424446
+	--color-gray-n700 #252830
+	--color-yellow-y200 #FFC400
+	--color-red-r300 #FF5630
 
 /* App */
+body
+	background-color var(--color-black)
+
 .container
 	display grid
-	grid-template-columns repeat(5, 1fr)
-	grid-template-rows 48px repeat(4, 1fr)
+	grid-template-columns 1fr
+	grid-template-rows 48px 1fr
 	grid-column-gap 1em
 	grid-row-gap 1em
 	// width 100vw
@@ -23,39 +28,45 @@
 	padding 1em 2em
 	background-color var(--color-black)
 
-.tap-setup-btn
-	display flex
-	justify-content center
-	align-items center
-	width 50px
-	height 100%
-	grid-column-start 5
-	grid-column-end 6
-	grid-row-start 1
-	grid-row-end 2
-	justify-self end
-	border none
-	border-radius 4px
-	font-size 1.5em
-	// cursor pointer
-	outline none
-	color white
-	&:hover
-		background-color rgba(#FFF, .2)
-		.tap-icon
-			fill var(--color-gray-n30)
-	.tap-icon
-		fill var(--color-gray-n400)
+	.display-header
+		display flex
+		flex-flow row nowrap
+		justify-content space-between
+		align-items center
 
-.brand
-	display flex
-	grid-column-start 1
-	grid-column-end 5
-	grid-row-start 1
-	grid-row-end 2
-	align-items center
-	text-align left
-	vertical-align center
-	font-size 2em
-	color var(--color-gray-n30)
-	font-family 'Helvetica', 'Arial', sans-serif
+		.tap-setup-btn
+			display flex
+			justify-content center
+			align-items center
+			width 50px
+			height 100%
+			border none
+			border-radius 4px
+			font-size 1.5em
+			// cursor pointer
+			outline none
+			color white
+			&:hover
+				background-color rgba(#FFF, .2)
+				.tap-icon
+					fill var(--color-gray-n30)
+			.tap-icon
+				fill var(--color-gray-n400)
+
+		.brand
+			display flex
+			align-items center
+			text-align left
+			vertical-align center
+			font-size 2em
+			color var(--color-gray-n30)
+			font-family 'Helvetica', 'Arial', sans-serif
+
+	.display
+		display grid
+		grid-template-columns 1fr 1fr
+		grid-template-rows repeat(5, 1fr)
+		grid-auto-flow row
+		grid-column-gap 4px
+		grid-row-gap 4px
+
