--- a/src/app/components/beer-card.styl
+++ b/src/app/components/beer-card.styl
@@ -3,9 +3,7 @@
 	flex-flow row nowrap
 	justify-content flex-start
 	align-items center
-	padding 1em
-	// position relative
-	// border 1px solid var(--color-gray-n10)
+	padding 2px 16px
 	border-radius .25em
 	background-color var(--color-gray-n700)
 	&:hover
@@ -14,7 +12,6 @@
 	.tap-number
 		flex-basis 8%
 		margin-right 20px
-		// color var(--color-red-r300)
 		color #8777D9
 		font-family 'Helvetica', 'Arial', sans-serif
 		font-size 3em
@@ -29,16 +26,15 @@
 		flex 2
 
 		.prod__brewery
-			font-family 'Helvetica', 'Arial', sans-serif
-			font-size 1em
-	
-		.prod__name
 			display flex
 			align-items center
-			font-family 'Garamond', 'Times', serif
+			font-family 'Helvetica', 'Arial', sans-serif
+			font-size 1.2em
+	
+		.prod__name
+			font-family 'Georgia', 'Times', serif
 			font-size 1.75em
 			font-weight bold
-			font-variant-numeric tabular-nums
 			letter-spacing 1px
 			margin-top 8px 
 		
@@ -46,7 +42,8 @@
 			padding 4px 8px 3px 8px
 			margin-left 16px
 			border-radius 2px
-			background-color var(--color-gray-n20)
+			// background-color var(--color-gray-n20)
+			border 2px solid
 			font-family 'Arial', 'Helvetica', sans-serif
 			font-size 12px
 			text-transform uppercase
@@ -55,19 +52,23 @@
 			color var(--color-black)
 
 	.card__stats
-		width 100%
 		display flex
 		flex-flow row nowrap
 		justify-content flex-start
 		flex 1
+		list-style-type none
 		font-family 'Arial', 'Helvetica', sans-serif
 		font-size 2em
 		color var(--color-white)
 
 		.stats__og, 
 		.stats__abv, 
-		.stats__ibu,
-		.stats__price 
+		.stats__ibu
+			margin-left .75em
+			min-width 4rem
+			text-align left
+		.stats__price
+			margin-left .6em
 			margin-right .6em
 			min-width 4rem
 			text-align center
