refactor: Rewrite template and some styles for table rows, add legend on top of each column

--- a/src/app/components/inventory.styl
+++ b/src/app/components/inventory.styl
@@ -16,7 +16,7 @@ input-flex-block =
 	background-color var(--color-white)
 	padding 24px
 	font-family 'Helvetica', 'Arial', sans-serif
-	border 10px double var(--color-black)
+	border 10px solid var(--color-black)
 	header
 		display flex
 		flex-flow row nowrap
