--- a/src/app/components/beer-card.styl
+++ b/src/app/components/beer-card.styl
@@ -56,20 +56,31 @@
 		flex-flow row nowrap
 		justify-content flex-start
 		flex 1
-		list-style-type none
 		font-family 'Arial', 'Helvetica', sans-serif
 		font-size 2em
 		color var(--color-white)
 
+		&.shifted
+			.legend-wrapper
+				display flex
+				flex-flow column nowrap
+			.legend
+				margin-left 16px
+				margin-bottom 4px
+				min-width 80px
+				text-align left
+				font-size 14px
+				opacity .5
+
 		.stats__og, 
 		.stats__abv, 
 		.stats__ibu
-			margin-left .75em
-			min-width 4rem
+			margin-left 16px
+			min-width 80px
 			text-align left
 		.stats__price
-			margin-left .6em
-			margin-right .6em
-			min-width 4rem
+			margin-left 8px
+			margin-right 16px
+			min-width 80px
 			text-align center
 
