Change svg loader mode to extract

--- a/src/index.styl
+++ b/src/index.styl
@@ -16,7 +16,8 @@
 /* App */
 body
 	background-color var(--color-black)
-	background-image url(http://stylus-lang.com/img/stylus-logo.svg)
+	// background-image url(http://stylus-lang.com/img/stylus-logo.svg)
+	background-image url(./assets/icons/ed-logo.svg);
 	background-position center
 	background-size 200px
 
