Fix icon in inventory

--- a/src/components/inventory.styl
+++ b/src/components/inventory.styl
@@ -22,7 +22,10 @@ input-flex-block =
 		flex-flow row nowrap
 		justify-content space-between
 		.close-icon
+			width 32px
+			height 32px
 			border-radius 4px
+			background-image url(./../assets/icons/close.svg)
 			&:hover
 				background-color var(--color-gray-n10)
 			// cursor pointer
